--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="TH">
    <head>
       <!-- basic -->
       <meta charset="utf-8">
@@ -56,16 +56,16 @@
                   </div>
                </div>
                <div class="sidebar_blog_2">
-                  <h4>General</h4>
+                  <h4>ทั่วไป</h4>
                   <ul class="list-unstyled components">
                      <li class="active">
-                        <a href="#dashboard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-dashboard yellow_color"></i> <span>Dashboard</span></a>
+                        <a href="#dashboard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-dashboard yellow_color"></i> <span>แดรชบรอด</span></a>
                         <ul class="collapse list-unstyled" id="dashboard">
                            <li>
-                              <a href="dashboard.html">> <span>Default Dashboard</span></a>
+                              <a href="dashboard.html">> <span>แดรชบรอดเริ่มต้น</span></a>
                            </li>
                            <li>
-                              <a href="dashboard_2.html">> <span>Dashboard style 2</span></a>
+                              <a href="dashboard_2.html">> <span>แดรชบรอดใหม่</span></a>
                            </li>
                         </ul>
                      </li>
@@ -136,12 +136,12 @@
                               </ul>
                               <ul class="user_profile_dd">
                                  <li>
-                                    <a class="dropdown-toggle" data-toggle="dropdown"><img class="img-responsive rounded-circle" src="images/layout_img/user_img.jpg" alt="#" /><span class="name_user">John David</span></a>
+                                    <a class="dropdown-toggle" data-toggle="dropdown"><img class="img-responsive rounded-circle" src="images/layout_img/user_img.jpg" alt="#" /><span class="name_user">SUWON SITIJAN</span></a>
                                     <div class="dropdown-menu">
-                                       <a class="dropdown-item" href="profile.html">My Profile</a>
-                                       <a class="dropdown-item" href="settings.html">Settings</a>
-                                       <a class="dropdown-item" href="help.html">Help</a>
-                                       <a class="dropdown-item" href="#"><span>Log Out</span> <i class="fa fa-sign-out"></i></a>
+                                       <a class="dropdown-item" href="profile.html">โปรไฟล์ของฉัน</a>
+                                       <a class="dropdown-item" href="settings.html">ตั้งค่า</a>
+                                       <a class="dropdown-item" href="help.html">ช่วยเหลือ</a>
+                                       <a class="dropdown-item" href="#"><span>ออกจากระบบ</span> <i class="fa fa-sign-out"></i></a>
                                     </div>
                                  </li>
                               </ul>
@@ -157,7 +157,7 @@
                      <div class="row column_title">
                         <div class="col-md-12">
                            <div class="page_title">
-                              <h2>Dashboard</h2>
+                              <h2>แดรชบรอด</h2>
                            </div>
                         </div>
                      </div>
@@ -172,7 +172,7 @@
                               <div class="counter_no">
                                  <div>
                                     <p class="total_no">2500</p>
-                                    <p class="head_couter">Welcome</p>
+                                    <p class="head_couter">ยินดีต้อนรับ-</p>
                                  </div>
                               </div>
                            </div>
@@ -187,7 +187,7 @@
                               <div class="counter_no">
                                  <div>
                                     <p class="total_no">123.50</p>
-                                    <p class="head_couter">Average Time</p>
+                                    <p class="head_couter">เวลาเฉลี่ย</p>
                                  </div>
                               </div>
                            </div>
@@ -202,7 +202,7 @@
                               <div class="counter_no">
                                  <div>
                                     <p class="total_no">1,805</p>
-                                    <p class="head_couter">Collections</p>
+                                    <p class="head_couter">ของสะสม</p>
                                  </div>
                               </div>
                            </div>
@@ -217,7 +217,7 @@
                               <div class="counter_no">
                                  <div>
                                     <p class="total_no">54</p>
-                                    <p class="head_couter">Comments</p>
+                                    <p class="head_couter">ความคิดเห็น</p>
                                  </div>
                               </div>
                            </div>
@@ -233,11 +233,11 @@
                                  <ul>
                                     <li>
                                        <span><strong>35k</strong></span>
-                                       <span>Friends</span>
+                                       <span>เพื่อน</span>
                                     </li>
                                     <li>
                                        <span><strong>128</strong></span>
-                                       <span>Feeds</span>
+                                       <span>ฟิด</span>
                                     </li>
                                  </ul>
                               </div>
@@ -252,11 +252,11 @@
                                  <ul>
                                     <li>
                                        <span><strong>584k</strong></span>
-                                       <span>Followers</span>
+                                       <span>ติดตาม</span>
                                     </li>
                                     <li>
                                        <span><strong>978</strong></span>
-                                       <span>Tweets</span>
+                                       <span>ทวิตเตอร์</span>
                                     </li>
                                  </ul>
                               </div>
@@ -271,11 +271,11 @@
                                  <ul>
                                     <li>
                                        <span><strong>758+</strong></span>
-                                       <span>Contacts</span>
+                                       <span>ผู้ติดต่อ</span>
                                     </li>
                                     <li>
                                        <span><strong>365</strong></span>
-                                       <span>Feeds</span>
+                                       <span>ฟิด</span>
                                     </li>
                                  </ul>
                               </div>
@@ -290,11 +290,11 @@
                                  <ul>
                                     <li>
                                        <span><strong>450</strong></span>
-                                       <span>Followers</span>
+                                       <span>ผู้ติดตาม</span>
                                     </li>
                                     <li>
                                        <span><strong>57</strong></span>
-                                       <span>Circles</span>
+                                       <span>แวดวง</span>
                                     </li>
                                  </ul>
                               </div>
@@ -307,7 +307,7 @@
                            <div class="white_shd full">
                               <div class="full graph_head">
                                  <div class="heading1 margin_0">
-                                    <h2>Extra Area Chart</h2>
+                                    <h2>ตารางสถิติงาน</h2>
                                  </div>
                               </div>
                               <div class="full graph_revenue">
@@ -331,7 +331,7 @@
                            <div class="dark_bg full margin_bottom_30">
                               <div class="full graph_head">
                                  <div class="heading1 margin_0">
-                                    <h2>Testimonial</h2>
+                                    <h2>ข้อความรับรอง</h2>
                                  </div>
                               </div>
                               <div class="full graph_revenue">
@@ -342,19 +342,9 @@
                                              <!-- Wrapper for carousel items -->
                                              <div class="carousel-inner">
                                                 <div class="item carousel-item active">
-                                                   <div class="img-box"><img src="images/layout_img/user_img.jpg" alt=""></div>
+                                                   <div class="img-box"><img src="images/layout_img/suwon.png" alt=""></div>
                                                    <p class="testimonial">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae..</p>
-                                                   <p class="overview"><b>Michael Stuart</b>Seo Founder</p>
-                                                </div>
-                                                <div class="item carousel-item">
-                                                   <div class="img-box"><img src="images/layout_img/user_img.jpg" alt=""></div>
-                                                   <p class="testimonial">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae..</p>
-                                                   <p class="overview"><b>Michael Stuart</b>Seo Founder</p>
-                                                </div>
-                                                <div class="item carousel-item">
-                                                   <div class="img-box"><img src="images/layout_img/user_img.jpg" alt=""></div>
-                                                   <p class="testimonial">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae..</p>
-                                                   <p class="overview"><b>Michael Stuart</b>Seo Founder</p>
+                                                   <p class="overview"><b>Suwon Sitijan</b>Seo สายเทา</p>
                                                 </div>
                                              </div>
                                              <!-- Carousel controls -->
@@ -377,7 +367,7 @@
                            <div class="white_shd full margin_bottom_30">
                               <div class="full graph_head">
                                  <div class="heading1 margin_0">
-                                    <h2>Progress Bar</h2>
+                                    <h2>แถบความคืบหน้า</h2>
                                  </div>
                               </div>
                               <div class="full progress_bar_inner">
@@ -417,80 +407,7 @@
                            </div>
                         </div>
                         <!-- end progress bar -->
-                     </div>
-                     <div class="row column4 graph">
-                        <div class="col-md-6 margin_bottom_30">
-                           <div class="dash_blog">
-                              <div class="dash_blog_inner">
-                                 <div class="dash_head">
-                                    <h3><span><i class="fa fa-calendar"></i> 6 July 2018</span><span class="plus_green_bt"><a href="#">+</a></span></h3>
-                                 </div>
-                                 <div class="list_cont">
-                                    <p>Today Tasks for Ronney Jack</p>
-                                 </div>
-                                 <div class="task_list_main">
-                                    <ul class="task_list">
-                                       <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>10:00 AM</strong></li>
-                                       <li><a href="#">Create new task for Dashboard</a><br><strong>10:00 AM</strong></li>
-                                       <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>11:00 AM</strong></li>
-                                       <li><a href="#">Create new task for Dashboard</a><br><strong>10:00 AM</strong></li>
-                                       <li><a href="#">Meeting about plan for Admin Template 2018</a><br><strong>02:00 PM</strong></li>
-                                    </ul>
-                                 </div>
-                                 <div class="read_more">
-                                    <div class="center"><a class="main_bt read_bt" href="#">Read More</a></div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div class="dash_blog">
-                              <div class="dash_blog_inner">
-                                 <div class="dash_head">
-                                    <h3><span><i class="fa fa-comments-o"></i> Updates</span><span class="plus_green_bt"><a href="#">+</a></span></h3>
-                                 </div>
-                                 <div class="list_cont">
-                                    <p>User confirmation</p>
-                                 </div>
-                                 <div class="msg_list_main">
-                                    <ul class="msg_list">
-                                       <li>
-                                          <span><img src="images/layout_img/msg2.png" class="img-responsive" alt="#" /></span>
-                                          <span>
-                                          <span class="name_user">Herman Beck</span>
-                                          <span class="msg_user">Sed ut perspiciatis unde omnis.</span>
-                                          <span class="time_ago">12 min ago</span>
-                                          </span>
-                                       </li>
-                                       <li>
-                                          <span><img src="images/layout_img/msg3.png" class="img-responsive" alt="#" /></span>
-                                          <span>
-                                          <span class="name_user">John Smith</span>
-                                          <span class="msg_user">On the other hand, we denounce.</span>
-                                          <span class="time_ago">12 min ago</span>
-                                          </span>
-                                       </li>
-                                       <li>
-                                          <span><img src="images/layout_img/msg2.png" class="img-responsive" alt="#" /></span>
-                                          <span>
-                                          <span class="name_user">John Smith</span>
-                                          <span class="msg_user">Sed ut perspiciatis unde omnis.</span>
-                                          <span class="time_ago">12 min ago</span>
-                                          </span>
-                                       </li>
-                                       <li>
-                                          <span><img src="images/layout_img/msg3.png" class="img-responsive" alt="#" /></span>
-                                          <span>
-                                          <span class="name_user">John Smith</span>
-                                          <span class="msg_user">On the other hand, we denounce.</span>
-                                          <span class="time_ago">12 min ago</span>
-                                          </span>
-                                       </li>
-                                    </ul>
-                                 </div>
-                                 <div class="read_more">
-                                    <div class="center"><a class="main_bt read_bt" href="#">Read More</a></div>
-                                 </div>
+                    
                               </div>
                            </div>
                         </div>
@@ -499,8 +416,8 @@
                   <!-- footer -->
                   <div class="container-fluid">
                      <div class="footer">
-                        <p>Copyright © 2018 Designed by html.design. All rights reserved.<br><br>
-                           Distributed By: <a href="https://themewagon.com/">ThemeWagon</a>
+                        <p>Copyright © 2022 ออกแบบ โดย suwon sitijan. สงวนลิขสิทธิ์.<br><br>
+                          
                         </p>
                      </div>
                   </div>
